--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,10 +7,25 @@
     "default_popup": "hello.html",
     "default_icon": "image/icon_16.png"
   },
-   "icons": {
-   "16": "image/icon_16.png",
-   "32": "image/icon_32.png",
-   "48": "image/icon_48.png",
-   "128": "image/icon_128.png"
- }
+  "icons": {
+    "16": "image/icon_16.png",
+    "32": "image/icon_32.png",
+    "48": "image/icon_48.png",
+    "128": "image/icon_128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.backlog.com/*", "https://*.backlog.jp/*"],
+      "js": ["content.js"],
+      "css": ["content.css"],
+      "run_at": "document_idle"
+    }
+  ],
+  "permissions": [
+    "activeTab"
+  ],
+  "host_permissions": [
+    "https://*.backlog.com/*",
+    "https://*.backlog.jp/*"
+  ]
 }
